--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,9 @@
-== README
+Project: ContactBook (store your contacts, share them with other users)
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Focus:
 
-Things you may want to cover:
+-routes/nested routes
 
-* Ruby version
+-controllers (handling invalid data/requests)
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+-params (strong params, nested params)
